# videosdk-linux-raw-recording-sample

./: .gitignore  CMakeLists.txt  README.md  config.txt  readme for docker.md
Dockerfile-Ubuntu/: Dockerfile
include/zoom_video_sdk/: readme.md
lib/zoom_video_sdk/: readme.md
lib/zoom_video_sdk/qt_libs/: readme.md
src/: ZoomVideoSDKRawDataPipeDelegate.cpp  ZoomVideoSDKRawDataPipeDelegate.h  ZoomVideoSDKShareSource.cpp  ZoomVideoSDKShareSource.h  ZoomVideoSDKVideoSource.cpp  ZoomVideoSDKVideoSource.h  ZoomVideoSDKVirtualAudioMic.cpp  ZoomVideoSDKVirtualAudioMic.h  ZoomVideoSDKVirtualAudioSpeaker.cpp  ZoomVideoSDKVirtualAudioSpeaker.h  setup-pulseaudio.sh  zoom_v-sdk_linux_bot.cpp  zoomus.conf
